$Author$ $Rev$
$Date$

Revision history for Perl extension Apache::Gallery.

X.X Thu Sep 15 14:47:51 CEST 2005

	- Add watermark even when picture doesn't need to be rescaled

1.0RC2 Wed Jun  1 09:11:50 CEST 2005

	- Added access keys for navigation (Michael Knudsen)

1.0RC1 Tue May 24 13:31:50 CEST 2005

	- Added submit button to form in selection mode (Vlad Marchenko)
	- Added new option GalleryRootPath for use when the gallery
	  is not running from the root of the virtual host (Lubomir Host)
	- Report proper errors when there are problems with templates (Don Armstrong)
	- Support newest mod_perl2 version (Philip Paeps)

0.9.1 Sat Sep 11 23:52:16 CEST 2004

	- Fix mod_perl 1 support that was broken with 0.9 (Michael Legart)

0.9 Sat Sep 11 22:03:20 CEST 2004

	- Handle .thm for all filetypes and not just tiff, gif and png
		(Michael Legart)
	- Make GallerySortBy work for directories (Michael Legart)
	- Make GalleryDirSortBy override GallerySortBy for directories
	  (Andreas Plesner)
	- Report 404 for HEAD requests to non-existing files or directories
	  (Michael Legart)
	- Scale images when they are requested from the cache instead of
	  before the index is displayed. (Michael Legart)
	- Sort pictures the same way when viewing images as when viewing
	  directories (Andreas Plesner)
	- Make the "back" link on the error page work in IE (Michael Legart)
	- Fixed the TITLE tag for folder comments (Ondra Kudlik)
	- New option GalleryUnderscoresToSpaces to convert underscores to
	  spaces in the listing of directories. (Ondra Kudlik)
	- Bugfix for when running outside a virtual host (Jeffrey Hartmann)
	- Support Apache2 on FreeBSD (Jesper Dalberg)
	- Avoid false 404 errors when running under mod_perl 2 (Tom Brown)

0.8 Sun Mar  7 11:22:00 CET 2004

	- Remember choosen width by setting a cookie (Rene Joergensen)
	- Fixed a bug where $EXIFVALUES was left blank if a picture
	  had a comment. (Michael Legart)
	- Fixed a bug where one line comments was showed as $COMMENT